--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Dataset content
+*.jpg
+*.png
+
+# Dataset
+*.zip
+
+# Pre-trained Model
+*.pth
+
+# Description File
+*.pptx
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
