--- a/logging.ini
+++ b/logging.ini
@@ -13,7 +13,7 @@ handlers=streamHandler,fileHandler
 
 [handler_streamHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 args=(sys.stdout, )
 formatter=simpleFormatter
 
