--- a/logging.ini
+++ b/logging.ini
@@ -24,4 +24,4 @@ args=('log.log', )
 formatter=simpleFormatter
 
 [formatter_simpleFormatter]
-format=[%(levelname)-7s] [%(name)s.%(funcName)s] %(message)s
+format=[%(asctime)s] [%(name)s.%(funcName)s] %(message)s
